--- a/warez.html
+++ b/warez.html
@@ -20,16 +20,16 @@
   
     
 <body>
-   <div class="sidenav">
+    <div class="sidenav">
+	       <a href="/warez">\warez</a>
   <a href="lycosa's-web/index-blog">\blog</a>
   <a href="#">\music</a>
   <a href="https://lycosa.zip">\landing</a>
   <a href="#">\graphics</a>
-  <a href="#">\residents</a>
+  <a href="/residents">\residents</a>
   <a href="/aboutme">\about</a>
-  <a href="#">\projects</a>
         <a href="#">\tech</a>
-        <a href="/warez">\warez</a>
+         
 </div>
 
     <div id="warning">
