--- a/residents.html
+++ b/residents.html
@@ -44,7 +44,7 @@
   </div>
   <div class="window-body">
     <pre>
-<img src="data/images/random/empy3logo.png">
+<img src="data/images/random/empy3logo.png" style="width:800px; height:800px">
         
     </pre>
         </div>
