--- a/residents.html
+++ b/residents.html
@@ -53,7 +53,7 @@ a:active {color:#fff;}
   <div class="window-body">
     <pre>
 <img src="data/images/random/empy3logo.png" style="width:400px; height:200px">
-<img src="data/images/random/Empy3 .RAWR concept album art(1).png" style="width:400px; height:400px">
+<img src="data/images/random/.RAWR_empy3_transparentart.png" style="width:400px; height:400px">
         
     </pre>
         </div>
