--- a/residents.html
+++ b/residents.html
@@ -53,8 +53,9 @@ a:active {color:#fff;}
   <div class="window-body">
     <pre>
 <img src="data/images/random/empy3logo.png" style="width:400px; height:200px">
+	<div id ="empyfloat">
 <img src="data/images/random/.RAWR_empy3_transparentart.png" style="width:400px; height:400px">
-        
+    </div>      
     </pre>
         </div>
   </div>
