--- a/residents.html
+++ b/residents.html
@@ -54,7 +54,7 @@ a:active {color:#fff;}
     <pre>
 <img src="data/images/random/empy3logo.png" style="width:400px; height:200px">
 	<div id ="empyfloat">
-<img src="data/images/random/.RAWR_empy3_transparentart.png" style="width:400px; height:400px">
+<img src="data/images/random/Empy3 .RAWR concept album art(1).png" style="width:400px; height:400px">
     </div>      
     </pre>
         </div>
