--- a/residents.html
+++ b/residents.html
@@ -53,8 +53,28 @@ a:active {color:#fff;}
   <div class="window-body">
     <pre>
 <img src="data/images/random/empy3logo.png" style="width:400px; height:200px">
-	<div class ="card">
-<img src="data/images/random/Empy3 .RAWR concept album art(1).png" style="width:400px; height:400px">
+<style>
+    --pointer-x: 50%;
+    --pointer-y: 50%;
+    --pointer-from-center: 0;
+    --pointer-from-top: 0.5;
+    --pointer-from-left: 0.5;
+    --card-opacity: 0;
+    --rotate-x: 0deg;
+    --rotate-y: 0deg;
+    --background-x: 50%;
+    --background-y: 50%;
+    --card-scale: 1;
+    --translate-x: 0px;
+    --translate-y: 0px;
+    --seedx: 0.7912164268439618;
+    --seedy: 0.671475580367672;
+    --cosmosbg: 580px 859px;
+  
+    --mask: url(https://poke-holo.b-cdn.net/foils/swsh12/masks/upscaled/tg02_foil_holo_rainbow_2x.webp);
+    --foil: url(https://poke-holo.b-cdn.net/foils/swsh12/foils/upscaled/tg02_foil_holo_rainbow_2x.webp);
+	</style>
+<img src="data/images/random/Empy3 .RAWR concept album art(1).png" loading="lazy" width="660" height="921"> <div class="card__shine"></div> <div class="card__glare"></div></div></button></div></div>
     </div>      
     </pre>
         </div>
