--- a/residents.html
+++ b/residents.html
@@ -53,7 +53,8 @@ a:active {color:#fff;}
   <div class="window-body">
     <pre>
 <img src="data/images/random/empy3logo.png" style="width:400px; height:200px">
-<style>
+<div class="card">
+		<style>
     --pointer-x: 50%;
     --pointer-y: 50%;
     --pointer-from-center: 0;
