--- a/residents.html
+++ b/residents.html
@@ -53,7 +53,10 @@ a:active {color:#fff;}
   <div class="window-body">
     <pre>
 <img src="data/images/random/empy3logo.png" style="width:400px; height:200px">
+<div class="imgwrap">		
 <img src="data/images/random/Empy3 .RAWR concept album art(1).png" style="width:400px; height:400px">
+		<div class="security"></div>
+		::after
     </div>      
     </pre>
         </div>
