--- a/residents.html
+++ b/residents.html
@@ -55,7 +55,7 @@ a:active {color:#fff;}
 <img src="data/images/random/empy3logo.png" style="width:400px; height:200px">
 <div class="imgwrap">
 <div id="empyshine">
-<img src="data/images/random/Empy3 .RAWR concept album art(1).png" style="width:400px; height:400px">
+<<img class="imgwrap" img src="data/images/random/Empy3 .RAWR concept album art(1).png" style="width:400px; height:400px">
 		<div class="security"></div>
 		::after
     </div>      
