--- a/residents.html
+++ b/residents.html
@@ -54,7 +54,7 @@ a:active {color:#fff;}
     <pre>
 <img src="data/images/random/empy3logo.png" style="width:400px; height:200px">
 <div id="empyshine">
-<img class="imgwrap" img src="data/images/random/Empy3 .RAWR concept album art(1).png" style="width:400px; height:400px">
+<img class="security" img src="data/images/random/Empy3 .RAWR concept album art(1).png" style="width:400px; height:400px">
 		<div class="security"></div>
 		::after
     </div>      
