--- a/residents.html
+++ b/residents.html
@@ -54,9 +54,9 @@ a:active {color:#fff;}
     <pre>
 <img src="data/images/random/empy3logo.png" style="width:400px; height:200px">
 		<div class="imgwrap">
-<div class="empyshine">		
-<img class="security" img src="data/images/random/Empy3 .RAWR concept album art(1).png" style="width:400px; height:400px">
-</div>
+	
+<img class="empyshine" img src="data/images/random/Empy3 .RAWR concept album art(1).png" style="width:400px; height:400px">
+<div class="security">	
     </div>      
     </pre>
         </div>
