--- a/residents.html
+++ b/residents.html
@@ -56,10 +56,10 @@ a:active {color:#fff;}
 		<div class="imgwrap">
 	
 <img class="empyshine" img src="data/images/random/Empy3 .RAWR concept album art(1).png" style="width:400px; height:400px">
-<div class="security">	
-    </div>      
-    </pre>
-        </div>
+
+      </pre>
+     </div>
+	  <div class="security"></div>	
   </div>
 </div>
 </div>
