--- a/residents.html
+++ b/residents.html
@@ -56,7 +56,7 @@ a:active {color:#fff;}
 		<div class="imgwrap">
 	
 <img class="empyshine" img src="data/images/random/Empy3 .RAWR concept album art(1).png" style="width:400px; height:400px">
-
+		</div>
       </pre>
      </div>
 	  <div class="security"></div>	
