--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
     
 <body>
    <div class="sidenav">
+	   <li><input id="8" type="checkbox" class="box">
+	<label for="8">+ </label> 
+	<a href="/game.php">gamedev</a>
+		<ul class="cool">
+			<li>$ <a href="/game.php?t=m">cd /game/mule</a></li>
+			<li>$ <a href="/game.php?t=p">cd /game/psurg</a></li>
+			<li>$ <a href="/game.php?t=o">cd /game/2000s</a></li>
+		</ul>
+	</li>
 	       <a href="/warez">\warez</a>
   <a href="lycosa's-web/index-blog">\blog</a>
   <a href="#">\music</a>
@@ -109,6 +118,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
