--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
     </head>
     
 <body>
-   <div class="sidenav">
-  <a href="/warez">\warez</a>
+	  <div id="sidenav">
+	   <ul id="sidenav">
+  <li><span class="caret">projects</span>
+	<ul class="nested">
+<li><a href="/projects/skizzrkixx">\skizzrkixx</a></li></ul>
+
   <a href="lycosa's-web/index-blog">\blog</a>
   <a href="#">\music</a>
   <a href="https://lycosa.zip">\landing</a>
@@ -109,6 +113,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
