--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 	  <div class="sidenav">
 	   <ul id="sidenav">
-  <a href="/projects" span class="caret"><li>projects</span></a>
+  <li><a href="/projects" span class="caret"></span>projects</a>
 	<ul class="nested">
 <li><a href="/projects/skizzrkixx">\skizzrkixx</a></li></ul>
 
@@ -121,6 +121,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
