--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
     
 <body>
 	  <div class="sidenav">
+		  <input id="6" type="checkbox" class="box">
+		  <label for="6">+ </label>
 	   <ul id="sidenav">
   <li><a href="/projects" span class="caret"></span>projects</a>
 	<ul class="nested">
-<li><a href="/projects/skizzrkixx">\skizzrkixx</a></li></ul>
+<li><a href="/projects/skizzrkixx">\skizzrkixx</a></li>
+	</ul>
 
   <a href="lycosa's-web/index-blog">\blog</a>
   <a href="#">\music</a>
@@ -121,6 +124,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
