Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
 <body>
 	  <div class="sidenav">
-		  <input id="6" type="checkbox" class="box">
+		  <input id="6" type="checkbox" class="box" hidden>
 		  <label for="6">+ </label>
 	   <ul id="sidenav">
   <li><a href="/projects" span class="caret"></span>projects</a>
@@ -124,6 +124,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
