--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 	  <div class="sidenav">
 	   <ul id="sidenav">
-  <a href="/projects" span class="caret"><li></span>projects</a></li>
+  <span class="caret"><li a href="/projects">projects</a></li></span>
 	<ul class="nested">
 <li><a href="/projects/skizzrkixx">\skizzrkixx</a></li>
 	</ul>
@@ -122,6 +122,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
