--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 	  <div class="sidenav">
 	   <ul id="sidenav">
-  <span class="caret"></span><li><a href="/projects">projects</a></li>
+  <span class="caret"></span><li>projects</li>
 	<ul class="nested">
 <li><a href="/projects/skizzrkixx">\skizzrkixx</a></li>
 	</ul>
@@ -121,6 +121,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
