--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
 <body>
 	  <div class="sidenav">
-	   <ul id="sidenav">
+	   <ul class="sidenav">
   <li><span class="caret"></span>projects</span>
 	<ul class="nested">
 <li><a href="/projects/skizzrkixx">\skizzrkixx</a></li>
@@ -121,6 +121,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
