--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ var i;
 for (i = 0; i < toggler.length; i++) {
   toggler[i].addEventListener("click", function() {
     this.parentElement.querySelector(".nested").classList.toggle("active");
+	      this.classList.toggle("caret-down");
   });
 } </script>
 </div>
@@ -121,6 +122,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
