--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
     
 <body>
- <div id="sidenav">
+ <div class="sidenav">
 	   <ul id="sidenav">
   <li><span class="caret">projects</span>
 	<ul class="nested">
@@ -122,6 +122,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
