--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 	<ul class="nested">
 <li><a href="/projects/skizzrkixx">\skizzrkixx</a></li>
 	</ul>
+ <li><span class="caret">projects</span>
+	<ul class="nested">
+<li><a href="/projects/skizzrkixx">\skizzrkixx</a></li>
+	</ul>	  
 
   <a href="lycosa's-web/index-blog">\blog</a>
   <a href="#">\music</a>
@@ -122,6 +126,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
