--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
 	<ul class="nested">
 <li><a href="/projects/skizzrkixx">\skizzrkixx</a></li>
 	</ul>
- <li><span class="caret">projects</span>
+ <li><span class="caret">resources</span>
 	<ul class="nested">
-<li><a href="/projects/skizzrkixx">\skizzrkixx</a></li>
+<li><a href="/resources/graphixx">\graphixx</a></li>
+<li><a href="/resources/web">\web</a></li>
+<li><a href="/resources/music">\stamps</a></li>
+<li><a href="/resources/design">\stamps</a></li>		
 	</ul>	  
 
   <a href="lycosa's-web/index-blog">\blog</a>
@@ -126,6 +129,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
