--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <li><a href="/resources/graphixx">\graphixx</a></li>
 <li><a href="/resources/web">\web</a></li>
 <li><a href="/resources/music">\stamps</a></li>
-<li><a href="/resources/design">\stamps</a></li>		
+<li><a href="/resources/design">\design+art</a></li>		
 	</ul>	  
 	  <hr>
   <a href="lycosa's-web/index-blog">\blog</a>
@@ -130,6 +130,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
