--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     
 <body>
  <div class="sidenav">
+ navigation
+	 	  <hr>
 	   <ul id="sidenav">
   <li><span class="caret">projects</span>
 	<ul class="nested">
@@ -130,6 +132,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
