--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
 <li><a href="/resources/web">\web</a></li>
 <li><a href="/resources/music">\stamps</a></li>
 <li><a href="/resources/design">\design+art</a></li>		
-	</ul>	  
-	  <hr>
+	</ul>	
+ </div>
+	<hr>
+	<div class="sidenav">
   <a href="lycosa's-web/index-blog">\blog</a>
   <a href="#">\music</a>
   <a href="https://lycosa.zip">\landing</a>
@@ -132,6 +134,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
