--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     
 <body>
  <div class="sidenav">
+<ul id="sidenav">
  navigation
+</ul>
 	 	  <hr>
 	   <ul id="sidenav">
   <li><span class="caret">projects</span>
@@ -134,6 +136,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
