--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     
 <body>
  <div class="sidenav">
-<ul id="sidenav">
+<div id="sidenav">	 
  navigation
-</ul>
+</div>
 	 	  <hr>
 	   <ul id="sidenav">
   <li><span class="caret">projects</span>
