--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
 <body>
  <div class="sidenav">
-<div id="sidenav">	 
+<div id="titlething">	 
  navigation
 </div>
 	 	  <hr>
@@ -136,6 +136,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
