--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
  <div class="sidenav">
 <div id="titlething">	 
- navigation
+ navigation:
 </div>
 	 	  <hr>
 	   <ul id="sidenav">
@@ -136,6 +136,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
