--- a/index.html
+++ b/index.html
@@ -31,21 +31,24 @@
 	  </ul>
 	  <hr>
  <li><span class="caret">resources</span>
-	<ul class="nested">
+	<ul class="nested">			
 <li><a href="/resources/graphixx">\graphixx</a></li>
 <li><a href="/resources/web">\web</a></li>
-<li><a href="/resources/music">\stamps</a></li>
+<li><a href="/resources/music">\musik</a></li>
 <li><a href="/resources/design">\design+art</a></li>		
 	</ul>
 	 </ul>
 	<hr>
-  <a href="lycosa's-web/index-blog">\blog</a>
-  <a href="#">\music</a>
-  <a href="https://lycosa.zip">\landing</a>
-  <a href="#">\graphics</a>
-  <a href="/residents">\residents</a>
-  <a href="/aboutme">\about</a>
-        <a href="#">\tech</a>
+ <li><span class="caret">fun</span>
+	<ul class="nested">
+<li><a href="/fun/warez">\warez</a></li>
+<li><a href="/fun/gamez">\gamez</a></li>
+<li><a href="/fun/artistz">\artistz</a></li>
+<li><a href="/fun/media">\media</a></li>		
+	</ul>
+	 </ul>
+	<hr>	 
+  
     <script>var toggler = document.getElementsByClassName("caret");
 var i;
 
@@ -136,6 +139,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
