--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 	</ul>
 	  </ul>
 	  <hr>
+	 <ul id="sidenav">
  <li><span class="caret">resources</span>
 	<ul class="nested">			
 <li><a href="/resources/graphixx">\graphixx</a></li>
@@ -39,6 +40,7 @@
 	</ul>
 	 </ul>
 	<hr>
+	 <ul id="sidenav">
  <li><span class="caret">fun</span>
 	<ul class="nested">
 <li><a href="/fun/warez">\warez</a></li>
@@ -48,7 +50,7 @@
 	</ul>
 	 </ul>
 	<hr>	 
-  
+  <ul id="sidenav">
     <script>var toggler = document.getElementsByClassName("caret");
 var i;
 
@@ -139,6 +141,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
