--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ var i;
 
 for (i = 0; i < toggler.length; i++) {
   toggler[i].addEventListener("click", function() {
-    this.parentElement.querySelector(".nested").classList.toggle("active");
+    this.parentElement.querySelector(".active").classList.toggle("nested");
 	      this.classList.toggle("caret-down");
   });
 } </script>
@@ -141,6 +141,7 @@ My name is Lala/Lycosa, and this is my web(site).
     </body>
 
 </html>
+
 
 
 
