--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ var i;
 
 for (i = 0; i < toggler.length; i++) {
   toggler[i].addEventListener("click", function() {
-    this.parentElement.querySelector(".active").classList.toggle("nested");
+    this.parentElement.querySelector(".nested").classList.toggle("active");
 	      this.classList.toggle("caret-down");
   });
 } </script>
@@ -110,6 +110,7 @@ for (i = 0; i < toggler.length; i++) {
 	</body>
 
 </html>
+
 
 
 
