--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 	 <ul id="sidenav">
  <li><span class="caret">resources</span>
 	<ul class="nested">			
-<li><a href="/resources/graphixx">\graphixx</a></li>
-<li><a href="/resources/web">\web</a></li>
-<li><a href="/resources/music">\musik</a></li>
-<li><a href="/resources/design">\design+art</a></li>		
+<li><a href="#">\graphixx</a></li>
+<li><a href="#">\web</a></li>
+<li><a href="#">\musik</a></li>
+<li><a href="#">\design+art</a></li>		
 	</ul>
 	 </ul>
 	<hr>
@@ -44,9 +44,9 @@
  <li><span class="caret">fun</span>
 	<ul class="nested">
 <li><a href="/fun/warez">\warez</a></li>
-<li><a href="/fun/gamez">\gamez</a></li>
-<li><a href="/fun/artistz">\artistz</a></li>
-<li><a href="/fun/media">\media</a></li>		
+<li><a href="#">\gamez</a></li>
+<li><a href="#">\artistz</a></li>
+<li><a href="#">\media</a></li>		
 	</ul>
 	 </ul>
 	<hr>	 
@@ -110,6 +110,7 @@ for (i = 0; i < toggler.length; i++) {
 	</body>
 
 </html>
+
 
 
 
