--- a/index.html
+++ b/index.html
@@ -24,9 +24,18 @@
 </div>
 	 	  <hr>
 	   <ul id="sidenav">
+  <li><span class="caret">characters</span>
+	<ul class="nested">
+<li><a href="/characters/lycosa">\lala</a></li>		
+<li><a href="/characters/empy3">\empy3</a></li>
+<li><a href="/characters/kairo">\kairo</a></li>	
+	</ul>
+	  </ul>
+	 	  <hr>
+	   <ul id="sidenav">
   <li><span class="caret">projects</span>
 	<ul class="nested">
-<li><a href="/projects/skizzrkixx">\skizzrkixx</a></li>
+<li><a href="/projects/game">\game</a></li>
 	</ul>
 	  </ul>
 	  <hr>
@@ -110,6 +119,7 @@ for (i = 0; i < toggler.length; i++) {
 	</body>
 
 </html>
+
 
 
 
