--- a/fun/warez.html
+++ b/fun/warez.html
@@ -8,7 +8,7 @@
        
       <meta charset="UTF-8">
       
-      <link rel="stylesheet" href="lycosa/css.css">
+      <link rel="stylesheet" href="cssfolder/css.css">
          <link rel="stylesheet" href="warez.css">
         <link rel="stylesheet" href="https://unpkg.com/xp.css">
   
