--- a/fun/warez.html
+++ b/fun/warez.html
@@ -9,7 +9,7 @@
       <meta charset="UTF-8">
       
       <link rel="stylesheet" href="cssfolder/css.css">
-         <link rel="stylesheet" href="warez.css">
+         <link rel="stylesheet" href="cssfolder/warez.css">
         <link rel="stylesheet" href="https://unpkg.com/xp.css">
   
  <script src="movingtitle.js"></script> 
