--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
        
       <meta charset="UTF-8">
       
-      <link rel="stylesheet" href="cssfolder/css.css">
-         <link rel="stylesheet" href="cssfolder/index.css">
+      <link rel="stylesheet" href="css.css">
+         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="https://unpkg.com/xp.css">
   
  <script src="movingtitle.js"></script> 
@@ -118,6 +118,7 @@ for (i = 0; i < toggler.length; i++) {
 	</body>
 
 </html>
+
 
 
 
