--- a/fun/warez.html
+++ b/fun/warez.html
@@ -8,8 +8,8 @@
        
       <meta charset="UTF-8">
       
-      <link rel="stylesheet" href="css.css">
-         <link rel="stylesheet" href="cssfolder/warez.css">
+      <link rel="stylesheet" href="https://lycosa.zip/css.css">
+         <link rel="stylesheet" href="https://lycosa.zip/cssfolder/warez.css">
         <link rel="stylesheet" href="https://unpkg.com/xp.css">
   
  <script src="movingtitle.js"></script> 
