--- a/fun/warez.html
+++ b/fun/warez.html
@@ -127,8 +127,8 @@ no longer produced. i am not responsible if any data is corrupt or missing.</pre
     </div>
   </div>
     <div class="window-body" style="font-size:1.2rem;">
-        <img class="static" src="lycosa/data/images/random/winspinstatic.png" style="width:173px; height:171px;"/>
-          <img class="active" src="lycosa/data/images/random/winspin1.gif" style="width:173px; height:171px;"/>
+        <img class="static" src="https://lycosa.zip/data/images/random/winspinstatic.png" style="width:173px; height:171px;"/>
+          <img class="active" src="https://lycosa.zip/images/random/winspin1.gif" style="width:173px; height:171px;"/>
 
     <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso1/winXPpro.zip" class="dlink">Download zipped ISO</a></p>
         <p>everyone knows windows xp, and this is just a ripped iso image from one of my physical discs. comes with no service pack, but is pro edition</p>
@@ -145,8 +145,8 @@ no longer produced. i am not responsible if any data is corrupt or missing.</pre
     </div>
   </div>
     <div class="window-body" style="font-size:1.2rem;">
-        <img class="static" src="lycosa/data/images/random/dicspinstatic.png" style="width:173px; height:190px;"/>
-        <img class="active" src="lycosa/data/images/random/dicspin.gif" style="width:173px; height:190px;"/>
+        <img class="static" src="https://lycosa.zip/data/images/random/dicspinstatic.png" style="width:173px; height:190px;"/>
+        <img class="active" src="https://lycosa.zip/data/images/random/dicspin.gif" style="width:173px; height:190px;"/>
     <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso2/mscomputerdic3rd.zip" class="dlink">Download zipped ISO</a></p>
         <p>a dumb computer dictionary microsoft released for windows 95/98. interesting graphics and possible text for graphic design. came with a physical book and this disc.</p>
   </div>
@@ -163,8 +163,8 @@ no longer produced. i am not responsible if any data is corrupt or missing.</pre
     </div>
   </div>
   <div class="window-body" style="font-size:1.2rem;">
-     <img class="static" src="lycosa/data/images/random/clickspinstatic.png" style="width:173px; height:171px;"/>
- <img class="active" src="lycosa/data/images/random/clickspin.gif" style="width:173px; height:171px;"/>
+     <img class="static" src="https://lycosa.zip/data/images/random/clickspinstatic.png" style="width:173px; height:171px;"/>
+ <img class="active" src="https://lycosa.zip/data/images/random/3dspin.gif" style="width:173px; height:171px;"/>
     <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso/clickndesign3d.zip" class="dlink">Download zipped ISO</a></p>
       <p>a pretty fun software to play around with. comes with many .wmf clipart images. very fun to use and fuck around with, ui based on your os.</p>
   </div>
@@ -182,8 +182,8 @@ no longer produced. i am not responsible if any data is corrupt or missing.</pre
     </div>
   </div>
     <div class="window-body" style="font-size:1.2rem;">
-        <img class="static" src="lycosa/data/images/random/tvstatic.png" style="width:173px; height:171px;"/>
-          <img class="active" src="lycosa/data/images/random/tvspin.gif" style="width:173px; height:171px;"/>
+        <img class="static" src="https://lycosa.zip/data/images/random/tvstatic.png" style="width:173px; height:171px;"/>
+          <img class="active" src="https://lycosa.zip/data/images/random/tvspin.gif" style="width:173px; height:171px;"/>
 
     <p><a href="https://github.com/skizzrkixx-rgb/lycosa/releases/download/iso3/TVphotoviewer.zip" class="dlink">Download zipped ISO</a></p>
         <p>weird software i picked up at goodwill. gives you the ability to put photos onto a floppy disk using the specific drive.</p>
