--- a/characters/kairo.html
+++ b/characters/kairo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>kairo</title>
-<link rel="stylesheet" href="css.css">  
+<link rel="stylesheet" href="https://lycosa.zip/css.css">  
 </head>
 <body>
 
