--- a/characters/kairo.html
+++ b/characters/kairo.html
@@ -18,7 +18,7 @@
 <li><a href="/characters/empy3">\empy3</a></li>
 <li><a href="/characters/kairo">\kairo</a></li>
   <div id="titlething">	 
-^ you are here ^
+^ you are here
 </div>  
 	</ul>
 	  </ul>
