--- a/characters/kairo.html
+++ b/characters/kairo.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <title>kairo</title>
-<link rel="stylesheet" href="https://lycosa.zip/css.css">  
+<link rel="stylesheet" href="https://lycosa.zip/css.css">
+<link rel="stylesheet" href="https://lycosa.zip/characters/kairo.css">  
 </head>
 <body>
 
