--- a/characters/kairo.html
+++ b/characters/kairo.html
@@ -13,6 +13,14 @@
 </div>
 	 	  <hr>
 	   <ul id="sidenav">
+  <li><span class="caret">landing</span>
+	<ul class="nested">
+<li><a href="https://lycosa.zip/">\index</a></li>		
+<li><a href="/aboutme">\about me</a></li>
+	</ul>
+	  </ul>
+	 	  <hr>
+	   <ul id="sidenav">
   <li><span class="caret">characters</span>
 	<ul class="nested">
 <li><a href="/characters/lycosa">\lala</a></li>		
