--- a/index.html
+++ b/index.html
@@ -23,11 +23,22 @@
 </div>
 	 	  <hr>
 	   <ul id="sidenav">
+  <li><span class="caret">landing</span>
+	<ul class="nested">
+<li><a href="https://lycosa.zip/">\index</a></li>
+<div id="titlething">	 
+^ you are here
+</div>  
+<li><a href="/aboutme">\about me</a></li>
+	</ul>
+	  </ul>
+	 	  <hr>
+	   <ul id="sidenav">
   <li><span class="caret">characters</span>
 	<ul class="nested">
 <li><a href="/characters/lycosa">\lala</a></li>		
 <li><a href="/characters/empy3">\empy3</a></li>
-<li><a href="/characters/kairo">\kairo</a></li>	
+<li><a href="/characters/kairo">\kairo</a></li>
 	</ul>
 	  </ul>
 	 	  <hr>
@@ -118,6 +129,7 @@ for (i = 0; i < toggler.length; i++) {
 	</body>
 
 </html>
+
 
 
 
