--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </head>
     
 <body>
+	<div id="body">
  <div class="sidenav">
 <div id="titlething">	 
  navigation:
@@ -126,9 +127,10 @@ for (i = 0; i < toggler.length; i++) {
 </div>
 </div>
   </div>
+</div>
 	</body>
-
 </html>
+
 
 
 
