--- a/characters/kairo.html
+++ b/characters/kairo.html
@@ -72,12 +72,8 @@ for (i = 0; i < toggler.length; i++) {
 </div>
 
 <div id="box">
-
-<p>MISANTHROPY</p>
-
-
+<p>misanthropy</p>
 </div>
-
-
-	
+<p>noun /məˈsanTHrəpē/</p>
+<p>a deep hatred towards humankind.</p>
 </body>
