--- a/characters/kairo.html
+++ b/characters/kairo.html
@@ -74,6 +74,10 @@ for (i = 0; i < toggler.length; i++) {
 <div id="box">
 <p>misanthropy</p>
 </div>
+<div id="box1">	
 <p>noun /məˈsanTHrəpē/</p>
+</div>
+<div id="box2">	
 <p>a deep hatred towards humankind.</p>
+</div>	
 </body>
