--- a/characters/kairo.html
+++ b/characters/kairo.html
@@ -75,9 +75,9 @@ for (i = 0; i < toggler.length; i++) {
 <p>misanthropy</p>
 </div>
 <div id="box1">	
-<p>noun /məˈsanTHrəpē/</p>
+noun /məˈsanTHrəpē/
 </div>
 <div id="box2">	
-<p>a deep hatred towards humankind.</p>
+a deep hatred towards humankind.
 </div>	
 </body>
