--- a/characters/kairo.html
+++ b/characters/kairo.html
@@ -72,7 +72,7 @@ for (i = 0; i < toggler.length; i++) {
 </div>
 
 <div id="box">
-<p>misanthropy</p>
+misanthropy
 </div>
 <div id="box1">	
 noun /məˈsanTHrəpē/
