--- a/characters/kairo.html
+++ b/characters/kairo.html
@@ -75,7 +75,7 @@ for (i = 0; i < toggler.length; i++) {
 misanthropy
 </div>
 <div id="box1">	
-noun /məˈsanTHrəpē/
+noun /mɪ'sæn.θrə.pi/
 </div>
 <div id="box2">	
 a deep hatred towards humankind.
