--- a/characters/kairo.html
+++ b/characters/kairo.html
@@ -70,7 +70,7 @@ for (i = 0; i < toggler.length; i++) {
   });
 } </script>
 </div>
-
+<div id="containurself">
 <div id="box">
 misanthropy
 </div>
@@ -79,5 +79,6 @@ noun /mɪ'sæn.θrə.pi/
 </div>
 <div id="box2">	
 a deep hatred towards humankind.
-</div>	
+</div>
+</div>		
 </body>
