--- a/characters/kairo.html
+++ b/characters/kairo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	 <meta charset="UTF-8"> 
 <title>kairo</title>
 <link rel="stylesheet" href="https://lycosa.zip/css.css">
 <link rel="stylesheet" href="https://lycosa.zip/characters/kairo.css">  
