--- a/characters/kairo.html
+++ b/characters/kairo.html
@@ -85,7 +85,7 @@ a deep hatred towards humankind.
 
 <div id="kairoimg1">
 
-<img src="https://f2.toyhou.se/file/f2-toyhou-se/images/56229057_suv8fwIQyXJRYNX.png?1666157786" alt="alternative text"> 
+<img src="/data/images/random/kairoimg1.png" alt="alternative text"> 
 
 </div>
 	
