--- a/characters/alone.html
+++ b/characters/alone.html
@@ -12,6 +12,9 @@ password=prompt("Please input the password.","");
 if (password==pass1)
 alert('Correct. Press OK to enter.');
 else
+  {
+window.location="alone";
+}
 </script>
 
 </body>
