--- a/characters/alone.html
+++ b/characters/alone.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>alone</title>
+<link rel="stylesheet" href="css.css">
 </head>
 <body>
   
@@ -10,12 +11,83 @@ var password;
 var pass1="0";
 password=prompt("Please input the password.","");
 if (password==pass1)
-alert('Correct. Press OK to enter.');
+alert('Correct. Please enter username.');
+var username;
+var user1="kairo";
+username=prompt("Please input the password.","");
+if (username==user1)
+alert('Correct. Welcome, KAIRO.'); 
 else
   {
 window.location="alone";
 }
 </script>
 
+  
+<div class="sidenav">
+<div id="titlething">	 
+ navigation:
+</div>
+	 	  <hr>
+	   <ul id="sidenav">
+  <li><span class="caret">landing</span>
+	<ul class="nested">
+<li><a href="https://lycosa.zip/">\index</a></li>
+<li><a href="/aboutme">\about me</a></li>
+	</ul>
+	  </li></ul>
+	 	  <hr>
+	   <ul id="sidenav">
+  <li><span class="caret">characters</span>
+	<ul class="nested">
+<li><a href="/characters/lycosa">\lala</a></li>		
+<li><a href="/characters/empy3">\empy3</a></li>
+<li><a href="/characters/kairo">\kairo</a></li>
+<div id="titlething">	 
+^ you are ???
+</div>  
+	</ul>
+	  </li></ul>
+	 	  <hr>
+	   <ul id="sidenav">
+  <li><span class="caret">projects</span>
+	<ul class="nested">
+<li><a href="/projects/game">\game</a></li>
+	</ul>
+	  </li></ul>
+	  <hr>
+	 <ul id="sidenav">
+ <li><span class="caret">resources</span>
+	<ul class="nested">			
+<li><a href="#">\graphixx</a></li>
+<li><a href="#">\web</a></li>
+<li><a href="#">\musik</a></li>
+<li><a href="#">\design+art</a></li>		
+	</ul>
+	 </li></ul>
+	<hr>
+	 <ul id="sidenav">
+ <li><span class="caret">fun</span>
+	<ul class="nested">
+<li><a href="/fun/warez">\warez</a></li>
+<li><a href="#">\gamez</a></li>
+<li><a href="#">\artistz</a></li>
+<li><a href="#">\media</a></li>		
+	</ul>
+	 </li></ul>
+	<hr>	 
+  <ul id="sidenav">
+    <script>var toggler = document.getElementsByClassName("caret");
+var i;
+
+for (i = 0; i < toggler.length; i++) {
+  toggler[i].addEventListener("click", function() {
+    this.parentElement.querySelector(".nested").classList.toggle("active");
+	      this.classList.toggle("caret-down");
+  });
+} </script>
+</ul>
+</div>
+  
 </body>
 </html> 
