--- a/characters/alone.html
+++ b/characters/alone.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>alone</title>
-<link rel="stylesheet" href="css.css">
+<link rel="stylesheet" href="/css.css">
 </head>
 <body>
   
@@ -11,10 +11,9 @@ var password;
 var pass1="0";
 password=prompt("Please input the password.","");
 if (password==pass1)
-alert('Correct. Please enter username.');
 var username;
 var user1="kairo";
-username=prompt("Please input the password.","");
+username=prompt("Correct. Please input your username.","");
 if (username==user1)
 alert('Correct. Welcome, KAIRO.'); 
 else
