--- a/characters/alone.html
+++ b/characters/alone.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>alone</title>
+<link rel="stylesheet" href="alone.css">
 <link rel="stylesheet" href="/css.css">
 <div class="crt"></div>
 </head>
