--- a/characters/alone.html
+++ b/characters/alone.html
@@ -14,7 +14,7 @@ password=prompt("Please input the password.","");
 if (password==pass1)
 var username;
 var user1="kairo";
-username=prompt("Correct. Please input your username.","");
+username=prompt("Please input your username.","");
 if (username==user1)
 alert('Correct. Welcome, KAIRO.'); 
 else
