--- a/characters/alone.html
+++ b/characters/alone.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>alone</title>
+<title>KAIRO_terminal</title>
 <link rel="stylesheet" href="/css.css">
 <link rel="stylesheet" href="alone.css">
 </head>
@@ -88,6 +88,14 @@ for (i = 0; i < toggler.length; i++) {
 } </script>
 </ul>
 </div>
+<div id="text1">
+
+Welcome, KAIRO, to the Aperture Laboratories™ Secure Terminal.
+Please enter a command into the terminal below in order to select an option. Enter "?" to show a list of avaliable commands.
+</div>
+
+
+	
   
 </body>
 </html> 
