--- a/characters/alone.html
+++ b/characters/alone.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>KAIRO_terminal</title>
+ <meta charset="UTF-8"> 	
 <link rel="stylesheet" href="/css.css">
 <link rel="stylesheet" href="alone.css">
 </head>
