--- a/characters/alone.html
+++ b/characters/alone.html
@@ -89,10 +89,10 @@ for (i = 0; i < toggler.length; i++) {
 } </script>
 </ul>
 </div>
-<div id="text1">
+<div class="text1">
 
-Welcome, KAIRO, to the Aperture Laboratories™ Secure Terminal.
-Please enter a command into the terminal below in order to select an option. Enter "?" to show a list of avaliable commands.
+<p>Welcome, KAIRO, to the Aperture Laboratories™ Secure Terminal.
+Please enter a command into the terminal below in order to select an option. Enter "?" to show a list of avaliable commands.</p>
 </div>
 
 
