--- a/characters/alone.html
+++ b/characters/alone.html
@@ -77,8 +77,8 @@ for (i = 0; i < toggler.length; i++) {
 </div>
 <div id="text0">
 
-<p>Welcome, KAIRO, to the Aperture Laboratories™ Secure Terminal.
-Please enter a command into the terminal below in order to select an option. Enter "?" to show a list of avaliable commands.</p>
+<p>Welcome, KAIRO, to the Aperture Laboratories™ Secure Terminal.</p>
+<p>Please enter a command into the terminal below in order to select an option. Enter "?" to show a list of avaliable commands.</p>
 </div>
 
 
