--- a/characters/alone.html
+++ b/characters/alone.html
@@ -86,14 +86,14 @@ for (i = 0; i < toggler.length; i++) {
 <script type="py">
 # Pyodide
 command = input("Enter a command: ")
-if command == "?"
+if command == "?":
 	print("Here is a list of avaliable commands:")
 	print("status, user_password, .txt_logs")
-if command == "status"
+if command == "status":
 	print("status: alive")
-if command == "user_password"
+if command == "user_password":
 	print("user_password: M4NT15")
-if command == ".txt_logs"
+if command == ".txt_logs":
 	print("null")
 else:
 	print("INVALID COMMAND. TRY AGAIN.")
