--- a/characters/alone.html
+++ b/characters/alone.html
@@ -82,9 +82,10 @@ for (i = 0; i < toggler.length; i++) {
 <p>Welcome, <b><i>KAIRO</i></b>, to the <i>Aperture Laboratories™</i> Secure Terminal.</p>
 <p>Please enter a command into the terminal below in order to select an option. Enter "?" to show a list of avaliable commands.</p>
 </div>
-
-<script type="py">
-# Pyodide
+<py-script>
+import sys
+from pyscript import display
+	
 command = input("Enter a command: ")
 if command == "?":
 	print("Here is a list of avaliable commands:")
@@ -97,8 +98,10 @@ if command == ".txt_logs":
 	print("null")
 else:
 	print("INVALID COMMAND. TRY AGAIN.")
-        </script>
-	
+
+display(sys.version)
+</py-script>
+
   
 </body>
 </html> 
