--- a/characters/alone.html
+++ b/characters/alone.html
@@ -82,26 +82,7 @@ for (i = 0; i < toggler.length; i++) {
 <p>Welcome, <b><i>KAIRO</i></b>, to the <i>Aperture Laboratories™</i> Secure Terminal.</p>
 <p>Please enter a command into the terminal below in order to select an option. Enter "?" to show a list of avaliable commands.</p>
 </div>
-<py-script>
-import sys
-from pyscript import display
-	
-command = input("Enter a command: ")
-if command == "?":
-	print("Here is a list of avaliable commands:")
-	print("status, user_password, .txt_logs")
-if command == "status":
-	print("status: alive")
-if command == "user_password":
-	print("user_password: M4NT15")
-if command == ".txt_logs":
-	print("null")
-else:
-	print("INVALID COMMAND. TRY AGAIN.")
-
-display(sys.version)
-</py-script>
-
+<script type="mpy" src="kairo.py"></script>
   
 </body>
 </html> 
