--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	   <ul id="sidenav">
   <li><span class="caret">characters</span>
 	<ul class="nested">
-<li><a href="/characters/lycosa">\lala</a></li>		
+<li><a href="/characters/lala">\lala</a></li>		
 <li><a href="/characters/empy3">\empy3</a></li>
 <li><a href="/characters/kairo">\kairo</a></li>
 	</ul>
