added some img to empy

--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -72,6 +72,7 @@ for (i = 0; i < toggler.length; i++) {
 } </script>
 </div>
 
+<img id="ddr-arrowz" src="\data\images\random\ddr-arrowz(1).png">
 
 </body>
 </html> 
