--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -71,7 +71,7 @@ for (i = 0; i < toggler.length; i++) {
   });
 } </script>
 </div>
-
+<img id="empylogo" src="\data\images\random\empy3logo.png">
 <img id="ddr-arrowz" src="\data\images\random\ddr-arrowz(1).png">
 
 </body>
