--- a/characters/alone.html
+++ b/characters/alone.html
@@ -77,12 +77,13 @@ for (i = 0; i < toggler.length; i++) {
 } </script>
 </ul>
 </div>
+<div class="main">
 <div id="text0">
 
 <p>Welcome, <b><i>KAIRO</i></b>, to the <i>Aperture Laboratories™</i> Secure Terminal.</p>
 <p>Please enter a command into the terminal below in order to select an option. Enter "?" to show a list of avaliable commands.</p>
 </div>
 
-  
+</div>
 </body>
 </html> 
