--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -71,12 +71,13 @@ for (i = 0; i < toggler.length; i++) {
   });
 } </script>
 </div>
+<div class="main">
 <div id="empytext">
 
 EMPY
 
 </div>
 <img id="ddr-arrowz" src="\data\images\random\ddr-arrowz(1).png">
-
+</div>
 </body>
 </html> 
