--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -77,6 +77,13 @@ for (i = 0; i < toggler.length; i++) {
 EMPY
 
 </div>
+
+<div id="empytext2">
+
+3
+
+
+</div>
 <img id="ddr-arrowz" src="\data\images\random\ddr-arrowz(1).png">
 </div>
 </body>
