--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -72,18 +72,9 @@ for (i = 0; i < toggler.length; i++) {
 } </script>
 </div>
 <div class="main">
-<div id="empytext">
 
-EMPY
+<span class="empytext">EMPY</span><span class="empytext2">e</span>
 
-</div>
-
-<div id="empytext2">
-
-3
-
-
-</div>
 <img id="ddr-arrowz" src="\data\images\random\ddr-arrowz(1).png">
 </div>
 </body>
