--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -73,7 +73,7 @@ for (i = 0; i < toggler.length; i++) {
 </div>
 <div class="main">
 
-<span class="empytext">EMPY</span><span class="empytext2">e</span>
+<span id="empytext">EMPY</span><span id="empytext2">3</span>
 
 <img id="ddr-arrowz" src="\data\images\random\ddr-arrowz(1).png">
 </div>
