--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -73,8 +73,9 @@ for (i = 0; i < toggler.length; i++) {
 </div>
 <div class="main">
 
-<span class="empytext">EMPY</span><span class="empytext2">3</span>
-
+<div id="empytext">
+<span class="empytext1">EMPY</span><span class="empytext2">3</span>
+</div>	
 <img id="ddr-arrowz" src="\data\images\random\ddr-arrowz(1).png">
 </div>
 </body>
