--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -72,11 +72,12 @@ for (i = 0; i < toggler.length; i++) {
 } </script>
 </div>
 <div class="main">
-
+<div class="containempy">
 <div id="empytext">
 <span class="empytext1">EMPY</span><span class="empytext2">3</span>
 </div>	
 <img id="ddr-arrowz" src="\data\images\random\ddr-arrowz(1).png">
+</div>
 </div>
 </body>
 </html> 
