--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -76,8 +76,7 @@ for (i = 0; i < toggler.length; i++) {
 <div id="empytext">
 <span class="empytext1">EMPY</span><span class="empytext2">3</span>
 </div>	
-<br>
-<img id="ddr-arrowz" src="\data\images\random\ddr-arrowz(1).png">
+<p><img id="ddr-arrowz" src="\data\images\random\ddr-arrowz(1).png"></p>
 </div>
 </div>
 </body>
