--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -78,7 +78,7 @@ for (i = 0; i < toggler.length; i++) {
 </div>	
 <img id="ddr-arrowz" src="\data\images\random\ddr-arrowz(1).png">
 <img id="modular" src="\data\images\random\modular.png">
-<img id="smile" src="\data\images\random\smile.png">
+<img id="smiley" src="\data\images\random\smile.png">
 </div>
 </div>
 </body>
