add main div to kairo.html to fix css issues

--- a/characters/kairo.html
+++ b/characters/kairo.html
@@ -71,6 +71,7 @@ for (i = 0; i < toggler.length; i++) {
   });
 } </script>
 </div>
+<div class="main">
 <div id="containurself">
 <div id="box">
 misanthropy
@@ -88,5 +89,5 @@ a deep hatred towards humankind.
 <img src="https://f2.toyhou.se/file/f2-toyhou-se/images/56229057_suv8fwIQyXJRYNX.png?1666157786" alt="placeholder"> 
 
 </div>
-	
+</div>	
 </body>
