--- a/characters/empy3.html
+++ b/characters/empy3.html
@@ -77,7 +77,7 @@ for (i = 0; i < toggler.length; i++) {
 <span class="empytext1">EMPY</span><span class="empytext2">3</span>
 </div>	
 <img id="ddr-arrowz" src="\data\images\random\ddr-arrowz(1).png">
-
+<img id="tama" src="\data\images\random\tamagotchi.png">
 <img id="modular" src="\data\images\random\modular.png">
 <img id="smiley" src="\data\images\random\smile.png">
 </div>
